manifest/greeter/DeploymentGreeterV1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
  namespace: default
  labels:
    app: greeter
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: EXCERSISES/greeter
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3004
            initialDelaySeconds: 5
            periodSeconds: 5
