manifest/greeter/DeploymentGreeterV2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  labels:
    app: greeter
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: EXCERSISES/greeter
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3004
            initialDelaySeconds: 5
            periodSeconds: 5
