manifest/greeter/GreeterService.yml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: default
  labels:
    app: greeter
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: greeter
