manifest/greeter/GreeterServiceV1.yml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  labels:
    app: greeter
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: greeter
    version: v1
