manifest/greeter/KnativeGreeter.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  namespace: exercises
  name: greeter
spec:
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
        - name: greeter
          image: EXCERSISES/greeter
          ports:
            - containerPort: 8080
          env:
            - name: SERVER_PORT
              value: "8080"
            - name: GREETER_VERSION
              value: "v1"
  traffic:
    - percent: 100
      latestRevision: true
