manifest/greeter/GreeterDestinationRuleV1.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeter-svc-1-dr
  namespace: default
spec:
  host: greeter-svc-1
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
