manifest/greeter/GreeterVirtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - greeter-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: greeter-svc-1
        port:
          number: 3004
      weight: 75
    - destination:
        host: greeter-svc-2
        port:
          number: 3004
      weight: 25
